cabal-version:       >= 1.10
name:                ini
version:             0.4.2.20220416
synopsis:            Configuration files in the INI format.
description:         Quick and easy configuration files in the INI format.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
homepage:            http://github.com/chrisdone/ini
bug-reports:         http://github.com/chrisdone/ini/issues
copyright:           2013 Chris Done
category:            Data, Configuration
build-type:          Simple

library
  hs-source-dirs:    src/
  exposed-modules:   Data.Ini
  build-depends:     base >= 4 && <5,
                     attoparsec,
                     text,
                     unordered-containers
  if !impl(ghc >= 8)
    build-depends: semigroups >= 0.10 && < 0.19

  default-language:   Haskell98
  default-extensions: OverloadedStrings

  ghc-options:        -Wall

test-suite ini-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:     base >= 4 && <5
                   , ini
                   , hspec
                   , unordered-containers

  default-language:  Haskell98

source-repository head
  type:     git
  location: http://github.com/chrisdone/ini.git
