cabal-version:       >= 1.10
name:                ini
version:             0.4.2
synopsis:            Configuration files in the INI format.
description:         Quick and easy configuration files in the INI format.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          Andreas Abel
homepage:            https://github.com/andreasabel/ini
bug-reports:         https://github.com/andreasabel/ini/issues
copyright:           2013 Chris Done
category:            Data, Configuration
build-type:          Simple

tested-with:
  GHC == 9.4.1
  GHC == 9.2.3
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3
  GHC == 7.8.4
  GHC == 7.6.3
  GHC == 7.4.2
  GHC == 7.2.2
  GHC == 7.0.4

extra-source-files:
  CHANGELOG.md
  README.md

library
  hs-source-dirs:    src/
  exposed-modules:   Data.Ini
  build-depends:     base >= 4 && <5,
                     attoparsec,
                     text,
                     unordered-containers
  if !impl(ghc >= 8)
    build-depends: semigroups >= 0.10 && < 0.21

  default-language:   Haskell98
  default-extensions: OverloadedStrings
                      TypeOperators

  ghc-options:        -Wall
  if impl(ghc >= 8)
    ghc-options:      -Wcompat

test-suite ini-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:     base >= 4 && <5
                   , ini
                   , hspec
                   , unordered-containers

  default-language:  Haskell98

source-repository head
  type:     git
  location: https://github.com/andreasabel/ini.git
